[gd_scene load_steps=28 format=3 uid="uid://dgil2vxuj5wcv"]

[ext_resource type="Script" uid="uid://blbkld85waa0v" path="res://player.gd" id="1_4cq66"]
[ext_resource type="Texture2D" uid="uid://kosjcet7ah1q" path="res://graphics/PlayerShip.png" id="1_l3rv8"]
[ext_resource type="Texture2D" uid="uid://bs247ppttd0o8" path="res://graphics/enginefx_idle.png" id="3_hqtel"]
[ext_resource type="Texture2D" uid="uid://dajs8snkdpm4d" path="res://graphics/engine_base.png" id="3_i3pqv"]
[ext_resource type="Texture2D" uid="uid://dvopmcfbocy7s" path="res://graphics/enginefx_powering.png" id="5_sweqy"]
[ext_resource type="Texture2D" uid="uid://d1h8wk68o1wth" path="res://graphics/shield_spritesheet.png" id="6_2hs0m"]

[sub_resource type="AtlasTexture" id="AtlasTexture_sweqy"]
atlas = ExtResource("3_hqtel")
region = Rect2(0, 24, 48, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hs0m"]
atlas = ExtResource("3_hqtel")
region = Rect2(48, 24, 48, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jxqw"]
atlas = ExtResource("3_hqtel")
region = Rect2(96, 24, 48, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_dw050"]
atlas = ExtResource("5_sweqy")
region = Rect2(0, 24, 48, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_b26j0"]
atlas = ExtResource("5_sweqy")
region = Rect2(48, 24, 48, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7ghd"]
atlas = ExtResource("5_sweqy")
region = Rect2(96, 24, 48, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvl01"]
atlas = ExtResource("5_sweqy")
region = Rect2(144, 24, 48, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_i3pqv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sweqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hs0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jxqw")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dw050")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b26j0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7ghd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvl01")
}],
"loop": true,
"name": &"powering",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_ivps1"]
atlas = ExtResource("6_2hs0m")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_urp6f"]
atlas = ExtResource("6_2hs0m")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwjto"]
atlas = ExtResource("6_2hs0m")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_606se"]
atlas = ExtResource("6_2hs0m")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1c27"]
atlas = ExtResource("6_2hs0m")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_op7ga"]
atlas = ExtResource("6_2hs0m")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q13i1"]
atlas = ExtResource("6_2hs0m")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pylmc"]
atlas = ExtResource("6_2hs0m")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbfsw"]
atlas = ExtResource("6_2hs0m")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5tmop"]
atlas = ExtResource("6_2hs0m")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ahtn"]
atlas = ExtResource("6_2hs0m")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7lmhl"]
atlas = ExtResource("6_2hs0m")
region = Rect2(704, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_sweqy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivps1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_urp6f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwjto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_606se")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1c27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_op7ga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q13i1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pylmc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbfsw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5tmop")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ahtn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7lmhl")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="player" type="Area2D" groups=["enemy"]]
collision_mask = 2
script = ExtResource("1_4cq66")

[node name="ShipSprite" type="Sprite2D" parent="."]
texture = ExtResource("1_l3rv8")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(0, -14, 15, 5, 15, 11, 4, 7, 3, 14, -3, 13, -4, 8, -15, 12, -16, 5, -6, -4)

[node name="Engine_base" type="Sprite2D" parent="."]
z_index = -1
texture = ExtResource("3_i3pqv")

[node name="Engine_effects" type="AnimatedSprite2D" parent="."]
z_index = -2
z_as_relative = false
position = Vector2(0, 12)
sprite_frames = SubResource("SpriteFrames_i3pqv")
animation = &"idle"
frame_progress = 0.905188

[node name="Shield" type="AnimatedSprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.588235)
z_index = 1
z_as_relative = false
sprite_frames = SubResource("SpriteFrames_sweqy")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
